--- a/TimerAssessment/AssessmentItem/AssessmentItem.storyboard
+++ b/TimerAssessment/AssessmentItem/AssessmentItem.storyboard
@@ -27,14 +27,20 @@
                                             <rect key="frame" x="0.0" y="0.0" width="373.5" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sft-rc-Ycd">
-                                                    <rect key="frame" x="37" y="11" width="200" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sft-rc-Ycd">
+                                                    <rect key="frame" x="40" y="8.5" width="200" height="26.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="U5s-ys-M6e"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="sft-rc-Ycd" firstAttribute="centerY" secondItem="EiN-XX-Ov8" secondAttribute="centerY" id="deV-tu-blT"/>
+                                                <constraint firstItem="sft-rc-Ycd" firstAttribute="leading" secondItem="EiN-XX-Ov8" secondAttribute="leadingMargin" constant="20" id="f4v-Vt-Rbm"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="assessmentItemName" destination="sft-rc-Ycd" id="ELL-eT-bV9"/>
